# advent-of-code

./: .gitignore  .gitlab-ci.golang.yml  .gitlab-ci.typescript.yml  .gitlab-ci.yml  Cargo.toml  README.md  go.mod  jest.config.js  package-lock.json  package.json  tsconfig.json
2021/day01/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day02/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day03/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day04/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day05/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day06/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day07/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day09/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day10/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day11/: main.go  part_one.go  part_one_test.go  part_two.go
2021/day12/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day13/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day14/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day15/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day16/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day17/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day20/: main.go  part_one.go  part_one_test.go  part_two.go  part_two_test.go
2021/day21/: main.go  part_one.go  part_one_test.go  part_two.go  (+1 more)
2022/: :  day1.go  day10.go  day11.go  day2.go  day3.go  day4.go  day5.go  day6.go  day7.go  day8.go
(+306 files in other folders)
